# LearningOpenGL

./: CMakeLists.txt  CMakePresets.json  NOTES.md  main.cpp
scripts/: install-deps.sh
shaders/: triangle.vert
